--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Django==5.2.7
 gunicorn==23.0.0
 idna==3.11
 packaging==25.0
+python-dotenv==1.1.1
 requests==2.32.5
 sqlparse==0.5.3
 urllib3==2.5.0
